# bfr5genie_py

./: pyproject.toml
src/bfr5genie/: __init__.py  entrypoints.py
